--- a/configs/swin/swin_tiny_patch4_window7_224_scaled_adam.yaml
+++ b/configs/swin/swin_tiny_patch4_window7_224_scaled_adam.yaml
@@ -10,9 +10,10 @@ MODEL:
 
 # for ScaledAdam optimizer
 TRAIN:
-  BASE_LR: 0.03
-  LR_BATCHES: 7500
-  LR_EPOCHES: 30
-  CLIP_GRAD: None
+  BASE_LR: 0.015
+  WARMUP_EPOCHS: 2
+  EPOCHS: 300
   OPTIMIZER:
-    BETAS: (0.9, 0.98)
+    BETAS: (0.9, 0.999)
+    PARAM_MIN_RMS: 1.0e-3
+    PARAM_MAX_RMS: 5.0
